Fix exp padding (caused width overflow)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -75,8 +75,7 @@
 }
 
 .exp {
-    width: 100%;
-    padding: 5px;
+    padding: 5px 0px;
     clear: both;
 }
 
